--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
+.pace{-webkit-pointer-events:none;pointer-events:none;-webkit-user-select:none;-moz-user-select:none;user-select:none}.pace-inactive{display:none}.pace .pace-progress{background:gold;position:fixed;z-index:2000;top:0;right:100%;width:100%;height:2px}.pace .pace-progress-inner{display:block;position:absolute;right:0;width:100px;height:100%;box-shadow:0 0 10px gold,0 0 5px gold;opacity:1;-webkit-transform:rotate(3deg) translate(0,-4px);-moz-transform:rotate(3deg) translate(0,-4px);-ms-transform:rotate(3deg) translate(0,-4px);-o-transform:rotate(3deg) translate(0,-4px);transform:rotate(3deg) translate(0,-4px)}.pace .pace-activity{display:block;position:fixed;z-index:2000;top:15px;right:15px;width:14px;height:14px;border:2px solid transparent;border-top-color:gold;border-left-color:gold;border-radius:10px;-webkit-animation:pace-spinner .4s linear infinite;-moz-animation:pace-spinner .4s linear infinite;-ms-animation:pace-spinner .4s linear infinite;-o-animation:pace-spinner .4s linear infinite;animation:pace-spinner .4s linear infinite}@-webkit-keyframes pace-spinner{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-moz-keyframes pace-spinner{0%{-moz-transform:rotate(0);transform:rotate(0)}100%{-moz-transform:rotate(360deg);transform:rotate(360deg)}}@-o-keyframes pace-spinner{0%{-o-transform:rotate(0);transform:rotate(0)}100%{-o-transform:rotate(360deg);transform:rotate(360deg)}}@-ms-keyframes pace-spinner{0%{-ms-transform:rotate(0);transform:rotate(0)}100%{-ms-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes pace-spinner{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
+
 body {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     background: url(../images/hero-bg.jpg) no-repeat center center fixed;
@@ -17,3 +19,30 @@ hr {border-color: gold; margin: 0.1rem auto}
 -webkit-box-shadow: 0 0 9px 0 rgba(0,0,0,0.5);
 box-shadow: 0 0 9px 0 rgba(0,0,0,0.5)}
 h2 {font-weight: 200}
+.footer {padding: 60px; margin-top: 40px; text-align: center; color: #fff}
+.footer a {color: gold; text-decoration: none}
+
+ @media (max-width: 579px) {
+        .kad-sendiri {margin-top: 20px;}
+        .kad-sendiri.instagram-gallery {width: 80vw;padding-bottom: 50px}
+        .request-invite.my-email {width: 90vw ; max-width: 100%;}
+        .kad-sendiri.majlis-bersanding,
+        .kad-sendiri.my-bertandang
+            {width: 80vw;max-width: 100%;}
+        .footer {margin-top: 1300px}
+      }
+
+ @media (min-width: 580px) and (max-width: 829px) {
+        .kad-sendiri.instagram-gallery {margin: 0;margin-right: 20px; margin-bottom: 20px;width: 520px}
+        .footer {margin-top: 800px}
+}
+
+ @media (min-width: 830px) and (max-width: 1109px) {
+        .berdua {display: inherit}
+        .kad-sendiri.majlis-bersanding,
+        .kad-sendiri.my-bertandang
+            {width: 355px; max-width: 100%; margin: 0;margin-bottom: 50px}
+     .kad-sendiri.majlis-bersanding {margin-right: 20px}
+     .kad-sendiri.my-bertandang {margin-right: -20px}
+     .footer {margin-top: 500px}
+}
